additional tweaks, fixes to links

--- a/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
+++ b/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
@@ -5,7 +5,7 @@ slug: /getting-started/wallets/using-metamask-with-celo
 ---
 
 :::caution
-MetaMask is primarily used for interacting with the Ethereum blockchain, and does not natively support Celo compatibility. As such, we recommend only sophisticated users and developers use it, at your own risk. Please check out options for Celo native wallets [here](https://docs.celo.org/getting-started/wallets).
+MetaMask is primarily used for interacting with the Ethereum blockchain, and does not natively support Celo compatibility. As such, we recommend only sophisticated users and developers use it, at your own risk. Please check out options for Celo native wallets [here](getting-started/wallets/index.md).
 :::
 
 :::danger
@@ -25,7 +25,7 @@ As mentioned above, MetaMask does not natively support Celo compatibility. Becau
 * Celo and Ethereum use different derivation paths for generating seed phrases. Because MetaMask does not let you specify a derivation path to use:
   * You can't import an existing Celo account into the MetaMask wallet using its seed phrase, as you'd get the Ethereum version of it. Instead, you have to import it using the associated private key.
   * Similarly, if you want to import the Celo account you made on MetaMask to a different Celo wallet \(e.g. [Valora](https://valoraapp.com/)\) you'd have to import it using the private key itself, NOT the seed phrase that MetaMask gives you.
-  * See these guides if you accidentally sent [ETH to CELO addresses](https://docs.celo.org/celo-owner-guide/celo-recovery) or [CELO to ETH addresses.](https://docs.celo.org/celo-owner-guide/eth-recovery)\*\*\*\*
+  * See these guides if you accidentally sent [ETH to CELO addresses](celo-holder-guide/celo-recovery.md) or [CELO to ETH addresses.](celo-holder-guide/eth-recovery.md)\*\*\*\*
 
 ### **Gas Prices**
 
