udpate to relative link

--- a/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
+++ b/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
@@ -29,7 +29,7 @@ As mentioned above, MetaMask does not natively support Celo compatibility. Becau
 
 ### Gas Fee Currency
 
-* While gas on Celo can usually be paid in [many different currencies](https://docs.celo.org/celo-codebase/protocol/transactions/erc20-transaction-fees), when using Metamask, gas fees will automatically be paid in CELO. This is because MetaMask will be using the [Ethereum-compatible Celo transaction format](https://github.com/celo-org/celo-proposals/blob/master/CIPs/cip-0035.md), which doesn't include the `feecurrency` field.
+* While gas on Celo can usually be paid in [many different currencies](/celo-codebase/protocol/transactions/erc20-transaction-fees), when using Metamask, gas fees will automatically be paid in CELO. This is because MetaMask will be using the [Ethereum-compatible Celo transaction format](https://github.com/celo-org/celo-proposals/blob/master/CIPs/cip-0035.md), which doesn't include the `feecurrency` field.
 
 ### Logo
 
