fix broken links

--- a/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
+++ b/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
@@ -20,12 +20,12 @@ Since Celo network's [Donut Hardfork](https://github.com/celo-org/celo-proposals
 
 ### **For end users:**
 
-* [Configure a Metamask Desktop or Web Wallet to Work with Celo](manual-setup)
-* [Setup a Ledger to Work with MetaMask to Work With Celo](using-a-ledger-with-metamask)
+* [Configure a Metamask Desktop or Web Wallet to Work with Celo](/manual-setup)
+* [Setup a Ledger to Work with MetaMask to Work With Celo](/using-a-ledger-with-metamask)
 
 ### **For developers:**
 
-* [Setup Metamask to Work with Your dApp](programmatic-setup)
+* [Setup Metamask to Work with Your dApp](/programmatic-setup)
 
 # **Things to Keep in Mind**
 
@@ -36,7 +36,7 @@ Metamask does not natively support Celo compatibility and some features won’t 
 Celo and Ethereum use different derivation paths for generating seed phrases. Because MetaMask does not let you specify a derivation path to use:
   * You can't import an existing Celo account into the MetaMask wallet using its seed phrase, as you'd get the Ethereum version of it. Instead, you have to import it using the associated private key.
   * If you want to import the Celo account you made on MetaMask to a different Celo wallet (e.g. [Valora](https://valoraapp.com/)) you'd have to import it using the private key itself, NOT the seed phrase that MetaMask gives you.
-  * See these guides if you accidentally sent [ETH to CELO addresses](../../celo-holder-guide/celo-recovery) or [CELO to ETH addresses.](../../celo-holder-guide/eth-recovery)
+  * See these guides if you accidentally sent [ETH to CELO addresses](../../celo-owner-guide/celo-recovery) or [CELO to ETH addresses.](../../celo-owner-guide/eth-recovery)
 
 ## Gas Fees Require CELO
 
