fix links (for real this time)

--- a/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
+++ b/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
@@ -20,12 +20,12 @@ Since Celo network's [Donut Hardfork](https://github.com/celo-org/celo-proposals
 
 ### **For end users:**
 
-* [Configure a Metamask Desktop or Web Wallet to Work with Celo](/manual-setup)
-* [Setup a Ledger to Work with MetaMask to Work With Celo](/using-a-ledger-with-metamask)
+* [Configure a Metamask Desktop or Web Wallet to Work with Celo](using-metamask-with-celo/manual-setup)
+* [Setup a Ledger to Work with MetaMask to Work With Celo](using-metamask-with-celo/using-a-ledger-with-metamask)
 
 ### **For developers:**
 
-* [Setup Metamask to Work with Your dApp](/programmatic-setup)
+* [Setup Metamask to Work with Your dApp](using-metamask-with-celo/programmatic-setup)
 
 # **Things to Keep in Mind**
 
