Valora > MetaMask Docs
Added 'Import a Valora Account to MetaMask with a Private Key'. Linked to doc from MetaMask overview page. Added page in MetaMask section from navigation.

--- a/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
+++ b/docs/getting-started/wallets/using-metamask-with-celo/index.mdx
@@ -35,6 +35,7 @@ Celo and Ethereum use different derivation paths for generating seed phrases. Be
 
   * You can't import an existing Celo account into the MetaMask wallet using its seed phrase, as you'd get the Ethereum version of it. Instead, you have to import it using the associated private key.
   * If you want to import the Celo account you made on MetaMask to a different Celo wallet (e.g. [Valora](https://valoraapp.com/)) you'd have to import it using the private key itself, NOT the seed phrase that MetaMask gives you.
+  * See this guide if you would like to [Import a Valora Account to MetaMask with a Private Key](metamask-valora-import.md)
   * See these guides if you accidentally sent [ETH to CELO addresses](../../../celo-holder-guide/celo-recovery.md) or [CELO to ETH addresses.](../../..//celo-holder-guide/eth-recovery.md)
 
 ## **Gas Fees Require CELO**
