--- a/blog/2022-01-04-no-code-erc20.md
+++ b/blog/2022-01-04-no-code-erc20.md
@@ -15,6 +15,8 @@ hide_table_of_contents: false
 
 How to deploy a token contract that use the ERC20 token standard to Celo without writing code.
 
+<!--truncate-->
+
 ## Getting Started
 
 In this tutorial, we will go over how to deploy an ERC20 token contract. The process is very similar for deploying other tokens as well.
