--- a/blog/2022-01-06-web-dapp.md
+++ b/blog/2022-01-06-web-dapp.md
@@ -16,6 +16,8 @@ hide_table_of_contents: false
 
 The basics of developing a decentralised application (DApp) on Celo.
 
+<!--truncate-->
+
 ## Getting Started
 
 This example will develop using one of the core Celo contracts, [Governance.sol](https://github.com/celo-org/celo-monorepo/blob/master/packages/protocol/contracts/governance/Governance.sol), and allowing users of our DApp to vote on active [Celo Governance proposals](https://docs.celo.org/celo-owner-guide/voting-governance).
