--- a/blog/2022-01-08-valora-wc-v1.md
+++ b/blog/2022-01-08-valora-wc-v1.md
@@ -17,6 +17,8 @@ import ImageWrapper from '@components/ImageWrapper'
 
 How to use [WalletConnect version 1](https://docs.walletconnect.com/1.0/) in a DApp to connect to [Valora](https://valoraapp.com/).
 
+<!--truncate-->
+
 ## Getting Started
 
 In this example, we will demonstrate how to add WalletConnect to a simple React app.
