Stablcoins = Mento Stablecoins
Updates to Mento Stablecoins

--- a/blog/2022-01-08-valora-wc-v1.md
+++ b/blog/2022-01-08-valora-wc-v1.md
@@ -51,7 +51,7 @@ If the DApp does not detect a [wallet connect provider](https://docs.walletconne
 
 If the DApp is being accessed on a computer or device other than the mobile device with the wallet, the user can connect to the mobile wallet by scanning the presented QR code. If the DApp is being accessed on the same device as the wallet, the connection will be made via the appropriate linking mechanism (iOS and Android are different). You can read more about that [here](https://docs.walletconnect.com/1.0/mobile-linking#wallet-support).
 
-When a provider is detected, the DApp will show a button to send some cUSD.
+When a provider is detected, the DApp will show a button to send some Mento cUSD.
 
 ![connect dapp](/img/doc-images/valora-wc-v1/connect-dapp.png)
 
@@ -99,7 +99,7 @@ Clicking the new button will prompt the user to send 0.001 cUSD to a hard-coded 
 You can code the transaction approval request with just a few lines, demonstrated in the `sendcUSD` function.
 
 - Get the saved instance of ContractKit from `this.state.kit`
-- Get the stabletoken (cUSD) contract
+- Get the Mento stabletoken (cUSD) contract
 - Call `transfer` and `send` with the recipient and amount
 
 ```js
@@ -122,7 +122,7 @@ The receipt will be logged once the user approves the transaction and it is conf
 
 ## Pay Fees in Stable currencies
 
-Specifying the `feeCurrency` field in the transaction will allow users to pay transaction fees in that currency. Here's how you can have users pay transaction fees in cUSD, for example:
+Specifying the `feeCurrency` field in the transaction will allow users to pay transaction fees in that currency. Here's how you can have users pay transaction fees in Mento cUSD, for example:
 
 ```js
 const stabletoken = await kit.contracts.getStableToken();
