--- a/blog/2022-01-06-web-dapp.md
+++ b/blog/2022-01-06-web-dapp.md
@@ -7,7 +7,7 @@ authors:
     title: Developer Relations, cLabs
     url: https://github.com/critesjosh
     image_url: https://github.com/critesjosh.png
-tags: [DApp, react, nextjs, use-contractkit, sdk]
+tags: [dapp, react, nextjs, use-contractkit, sdk]
 image: https://dl.airtable.com/.attachmentThumbnails/a7e530eb72ac8f30f37c0a3447ef0e7d/72e944da
 hide_table_of_contents: false
 ---
@@ -299,8 +299,9 @@ A prerequisite to [voting on Celo governance proposals](/celo-owner-guide/voting
 const lockValue = new BigNumber(res.flags.value);
 
 const lockedGold = await this.kit.contracts.getLockedGold();
-const pendingWithdrawalsValue =
-  await lockedGold.getPendingWithdrawalsTotalValue(address);
+const pendingWithdrawalsValue = await lockedGold.getPendingWithdrawalsTotalValue(
+  address
+);
 const relockValue = BigNumber.minimum(pendingWithdrawalsValue, value);
 const lockValue = value.minus(relockValue);
 
