--- a/blog/2022-01-04-no-code-erc20.md
+++ b/blog/2022-01-04-no-code-erc20.md
@@ -22,7 +22,7 @@ How to deploy a token contract that use the ERC20 token standard to Celo without
 In this tutorial, we will go over how to deploy an ERC20 token contract. The process is very similar for deploying other tokens as well.
 
 1. Install [Metamask](https://metamask.io/).
-2. [Add the Celo network](/getting-started/wallets/using-metamask-with-celo/manual-setup#adding-a-celo-network-to-metamask) to Metamask. We suggest adding the Alfajores testnet to Metamask as well, so you can test contract deployments before deploying to mainnet.
+2. [Add the Celo network](/wallet/metamask/setup#adding-a-celo-network-to-metamask) to Metamask. We suggest adding the Alfajores testnet to Metamask as well, so you can test contract deployments before deploying to mainnet.
 3. Add a small amount of CELO to your Metamask account. In this example, we will deploy to the Alfajores testnet, so we need Alfajores CELO, which you can get from the faucet [here](https://celo.org/developers/faucet).
 4. Go to the [Open Zeppelin Contracts Wizard](https://docs.openzeppelin.com/contracts/4.x/wizard).
 5. Select `ERC20` as the type of contract that you would like to deploy.
