Tutorial Celo Valora + Wallet Connect
Updated link to point to tutorial in docs

--- a/blog/2022-01-08-valora-wc-v1.md
+++ b/blog/2022-01-08-valora-wc-v1.md
@@ -9,6 +9,7 @@ authors:
 tags: [react, valora, wallet connect]
 image: https://dl.airtable.com/.attachmentThumbnails/a7e530eb72ac8f30f37c0a3447ef0e7d/72e944da
 hide_table_of_contents: false
+slug: "/tutorials/celo-valora-and-walletconnect-v1"
 ---
 
 import ImageWrapper from '@components/ImageWrapper'
