--- a/docs/community/celo-sage/submit-application.mdx
+++ b/docs/community/celo-sage/submit-application.mdx
@@ -5,10 +5,15 @@ description: Follow the instructions to apply for Celo Sage Program.
 
 # 🌱 Become Celo Sage
 
-How to start with Celo Sage
+How to get started as a content creator in the Celo Sage Program.
+
+---
+
+## Welcome!
+
 So you've decided to create content for Celo Sage? We are excited to collaborate with you. Please follow the below steps to get started.
 
-## Step 1: Fill the Google Form
+## ✅ Step 1: Fill the Google Form
 
 Start by filling out this Google form and explaining your idea. (If you don't see the google form, click [here](https://forms.gle/BAwSsvCqmrHo8gvb9))
 
@@ -16,15 +21,15 @@ Start by filling out this Google form and explaining your idea. (If you don't se
   <iframe style={{position: "absolute", top: 0, left: 0, width: "100%", height: "100%"}} src="https://docs.google.com/forms/d/e/1FAIpQLSebVZvLU0XvFQ2yW6Kmgu8n6Lu6aTdoIQAv41n5b-j-uH-IOQ/viewform?embedded=true" width="640" height="1706" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
-## Step 2: Reviewing the Application
+## ✅ Step 2: Reviewing the Application
 
 You will hear from us in 24-48 hours via email/discord, where we will discuss the uniqueness of the idea. The rewards amount will be decided in this phase. Note that rewards amount depends on content uniqueness, complexity and demand.
 
-## Step 3: Start Writing
+## ✅ Step 3: Start Writing
 
 Once we approve the request, you can choose your preferred text editor to start writing the content. Please follow the [Contribution Guidelines](/community/celo-sage/contribution-guidelines) and [Tutorial Structure](/community/celo-sage/tutorial-structure) while writing the content.
 
-## Step 4: Submit the Content
+## ✅ Step 4: Submit the Content
 
 Fork the [https://github.com/celo-org/docs](https://github.com/celo-org/docs) repo, create a new branch and inside the blog directory, create a .md file and paste your article/tutorial.
 
@@ -36,7 +41,7 @@ Follow [PR guidelines](/community/celo-sage/contribution-guidelines#how-to-creat
 
 :::
 
-## Step 5: Review Process 
+## ✅ Step 5: Review Process 
 
 Our editors will review the content ASAP and suggest changes in the same PR. Once the content is approved, it will be merged and published on the Celo Blog website.
 
@@ -45,5 +50,3 @@ Our editors will review the content ASAP and suggest changes in the same PR. Onc
 If you have any questions, please reach out [FAQs](/community/celo-sage/faq).
 
 :::
-
----
