Tutorial hero images
added the rest of the tutorial hero images

--- a/blog/2022-01-04-no-code-erc20.md
+++ b/blog/2022-01-04-no-code-erc20.md
@@ -15,6 +15,8 @@ hide_table_of_contents: false
 
 How to deploy a token contract that use the ERC20 token standard to Celo without writing code.
 
+![header](../src/data-tutorials/showcase/beginner/deploy-and-mint-a-token-on-celo.png)
+
 <!--truncate-->
 
 ## Getting Started
@@ -68,7 +70,7 @@ You can see the contract information on the [Alfajores block explorer](https://a
 
 When you're ready to deploy your token to the Celo Mainnet make sure to change the network of your connected wallet from Alfajores to the Celo Mainnet. Once you have done this you can simply redeploy the contract (you will not need to recompile it).
 
-Note: When deploying to the Mainnet you will need to use real Celo to pay the gas fee (as opposed to using the faucet on the testnet). As of December 2021 this cost is less than $0.01 US. You can learn how to [get Celo here](https://celo.org/buy).
+Note: When deploying to the Mainnet you will need to use real Celo to pay the gas fee (as opposed to using the faucet on the testnet). As of December 2021 this cost is less than \$0.01 US. You can learn how to [get Celo here](https://celo.org/buy).
 
 You can read about how to add your new token to the Celo Wallet [here](/blog/add-token-celo-wallet).
 
