--- a/blog/2022-01-06-web-dapp.md
+++ b/blog/2022-01-06-web-dapp.md
@@ -16,6 +16,8 @@ hide_table_of_contents: false
 
 The basics of developing a decentralised application (DApp) on Celo.
 
+![header](../src/data-tutorials/showcase/intermediate/create-a-react-based-dapp-on-celo.png)
+
 <!--truncate-->
 
 ## Getting Started
