--- a/blog/2022-01-08-valora-wc-v1.md
+++ b/blog/2022-01-08-valora-wc-v1.md
@@ -18,6 +18,8 @@ import ImageWrapper from '@components/ImageWrapper'
 
 How to use [WalletConnect version 1](https://docs.walletconnect.com/1.0/) in a DApp to connect to [Valora](https://valoraapp.com/).
 
+![header](../src/data-tutorials/showcase/intermediate/celo-valora-and-walletconnect-v1.png)
+
 <!--truncate-->
 
 ## Getting Started
